--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "keywords": [
     "Gulp",
-    "plugin",
+    "gulpplugin",
     "JSON to JS",
     "JSON to Javascript"
   ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/boguan/gulp-json2js.git"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10"
   },
   "author": "Boguan",
   "license": "MIT",
